metrique/tests/ui/fail/value_enum_with_generic.rs
use metrique::unit_of_work::metrics;

#[metrics(value(string))]
enum ValueEnumWithGeneric<T> {
    Foo,
    Bar,
}

fn main() {}
